--- a/locale/en.txt
+++ b/locale/en.txt
@@ -104,14 +104,16 @@ Image_0335BCCD_0D2A_5E90_41A9_60A0045AD24D.url = skin/Image_0335BCCD_0D2A_5E90_4
 Image_0335DCCD_0D2A_5E90_4108_C574BC8ABAB0.url = skin/Image_0335DCCD_0D2A_5E90_4108_C574BC8ABAB0_en.jpg
 Image_03378CCC_0D2A_5E90_4192_7FA53AA46B95.url = skin/Image_03378CCC_0D2A_5E90_4192_7FA53AA46B95_en.jpg
 Image_181C73C9_0849_303B_4193_DD36466F3282.url = skin/Image_181C73C9_0849_303B_4193_DD36466F3282_en.jpg
-Image_18501851_084B_102B_419A_3673F05DE019.url = skin/Image_18501851_084B_102B_419A_3673F05DE019_en.jpg
-Image_1851361A_084B_105E_418D_083042EA980A.url = skin/Image_1851361A_084B_105E_418D_083042EA980A_en.jpg
+Image_18501851_084B_102B_419A_3673F05DE019.url = skin/Image_18501851_084B_102B_419A_3673F05DE019_en.png
+Image_1851361A_084B_105E_418D_083042EA980A.url = skin/Image_1851361A_084B_105E_418D_083042EA980A_en.png
 Image_1851FA6B_0849_30FE_4182_706D05542A2A.url = skin/Image_1851FA6B_0849_30FE_4182_706D05542A2A_en.jpg
 Image_18538CB2_084B_106E_419C_D12EF73DF171.url = skin/Image_18538CB2_084B_106E_419C_D12EF73DF171_en.jpg
 Image_1854D1DB_084B_13DE_4186_1FB92E9B8F4C.url = skin/Image_1854D1DB_084B_13DE_4186_1FB92E9B8F4C_en.jpg
 Image_1861999F_084B_1056_41A0_6F187E517541.url = skin/Image_1861999F_084B_1056_41A0_6F187E517541_en.jpg
 Image_1875FBD8_0849_17DA_419B_C7E842601A96.url = skin/Image_1875FBD8_0849_17DA_419B_C7E842601A96_en.jpg
 Image_1B642C52_0849_302E_4196_71D2010ABD20.url = skin/Image_1B642C52_0849_302E_4196_71D2010ABD20_en.jpg
+Image_2DA6C4DA_22BF_4145_419E_ABD465872CE0.url = skin/Image_2DA6C4DA_22BF_4145_419E_ABD465872CE0_en.png
+Image_337546A9_22A8_C1C7_417A_635410A473E4.url = skin/Image_337546A9_22A8_C1C7_417A_635410A473E4_en.png
 Image_A56E7F7E_FE13_2E18_41E3_0155153C8421.url = skin/Image_A56E7F7E_FE13_2E18_41E3_0155153C8421_en.png
 Image_D88A60BE_FE73_3218_41E9_38A73B14555A.url = skin/Image_D88A60BE_FE73_3218_41E9_38A73B14555A_en.jpg
 Image_E7916DB3_FEDE_3A68_41E7_15A5C203107C.url = skin/Image_E7916DB3_FEDE_3A68_41E7_15A5C203107C_en.jpg
