--- a/locale/en.txt
+++ b/locale/en.txt
@@ -7,19 +7,21 @@ LinkBehaviour_80B712D2_9263_BAC8_41C8_F39630CE86D9.source = https://register-vol
 LinkBehaviour_81777ECA_9263_8AD8_41D4_9745D8C5DE02.source = https://register-volvo.vercel.app/
 WebFrame_00FDDFCD_0DF2_D307_4193_D7B2F3D7E7DA.url = https://register-volvo.vercel.app/
 LinkBehaviour_A565AF81_FE13_2EE8_41EB_3E07A42E8DA0.source = https://www.udtrucks.com
+LinkBehaviour_03394CAF_0D2A_5E91_419E_48EDF7F61817.source = https://www.udtrucks.com
 LinkBehaviour_E79ECDB2_FEDE_3A68_41D1_938BF0436984.source = https://www.udtrucks.com
 LinkBehaviour_BF14E3F4_FE31_562A_41CE_8472BF4A0412.source = https://www.udtrucks.com
-LinkBehaviour_03394CAF_0D2A_5E91_419E_48EDF7F61817.source = https://www.udtrucks.com
 LinkBehaviour_C11BFA95_FE30_F6E8_41D4_5303A9D5AD50.source = https://www.udtrucks.com/about-us/company/contact-us
 LinkBehaviour_033EACB0_0D2A_5E8F_416E_0F15390226C4.source = https://www.udtrucks.com/about-us/company/contact-us
 LinkBehaviour_A56B0F80_FE13_2EE8_41BE_784128E3A22E.source = https://www.udtrucks.com/about-us/company/contact-us
 LinkBehaviour_E79E1DB2_FEDE_3A68_41DE_D81580411591.source = https://www.udtrucks.com/about-us/company/contact-us
+LinkBehaviour_BF2684C4_93ED_1582_41D3_B9804323F4B0.source = https://www.udtrucks.com/thailand/aboutud/contact-us
+LinkBehaviour_8A73B92C_93B3_3C82_41D2_84549813291B.source = https://www.udtrucks.com/thailand/aboutud/contact-us
 LinkBehaviour_42797EEB_5512_49E0_41D1_C4942FE79A8B.source = https://www.udtrucks.com/thailand/dealers/find-dealer
 LinkBehaviour_877DAADD_888E_C5DA_41BF_0CE1F247C355.source = https://www.udtrucks.com/thailand/trucks/croner
 LinkBehaviour_98548018_888F_C45A_41B5_6C90089D9A52.source = https://www.udtrucks.com/thailand/trucks/quester
-PopupWebFrameBehaviour_7DFBAB9F_5535_C821_41BD_61E69D5E22D7.url = //www.youtube.com/embed/UcewELMPhYw?autoplay=1&mute=1&loop=1&playlist=UcewELMPhYw
-PopupWebFrameBehaviour_7D1295B7_5536_5861_41B5_4113BBFEAC49.url = //www.youtube.com/embed/UcewELMPhYw?autoplay=1&mute=1&loop=1&playlist=UcewELMPhYw
 PopupWebFrameBehaviour_783EF9DB_5536_4820_41CD_1262B9CEE776.url = //www.youtube.com/embed/UcewELMPhYw?autoplay=1&mute=1&loop=1&playlist=UcewELMPhYw
+PopupWebFrameBehaviour_7D1295B7_5536_5861_41B5_4113BBFEAC49.url = //www.youtube.com/embed/UcewELMPhYw?autoplay=1&mute=1&loop=1&playlist=UcewELMPhYw
+PopupWebFrameBehaviour_7DFBAB9F_5535_C821_41BD_61E69D5E22D7.url = //www.youtube.com/embed/UcewELMPhYw?autoplay=1&mute=1&loop=1&playlist=UcewELMPhYw
 
 ## Hotspot
 
@@ -75,7 +77,7 @@ imlevel_84068920_9260_9749_41E0_65FBEE656821.url = media/panorama_9D2AC144_9260_
 imlevel_8406C932_9260_9749_41BD_A388D7830437.url = media/panorama_9D2AC144_9260_97C8_41D6_193632EF56CE_HS_cuevc10z_en.webp
 imlevel_84EF3A50_9260_95C9_41BC_7C2F705EFA7E.url = media/panorama_9D2AC144_9260_97C8_41D6_193632EF56CE_HS_gwd19sk3_en.webp
 imlevel_8407F96C_9260_97D8_4155_9BCD2BB82C44.url = media/panorama_9D2AC144_9260_97C8_41D6_193632EF56CE_HS_i7afvq6k_en.webp
-imlevel_8404F99E_9260_9778_41E0_426D47549214.url = media/panorama_9D2AC144_9260_97C8_41D6_193632EF56CE_HS_i8uwonsd_en.webp
+imlevel_9CE7D505_9397_7482_419E_6019E6C88A2A.url = media/panorama_9D2AC144_9260_97C8_41D6_193632EF56CE_HS_i8uwonsd_en.webp
 imlevel_84EDCA80_9260_9549_4180_9CDA160C7988.url = media/panorama_9D2AC144_9260_97C8_41D6_193632EF56CE_HS_i90fx4pk_en.webp
 imlevel_84E2BA99_9260_9578_41D6_E3C2CF39B459.url = media/panorama_9D2AC144_9260_97C8_41D6_193632EF56CE_HS_lnc3mf61_en.webp
 imlevel_8401490F_9260_9758_41E1_DEECBAD8A7F9.url = media/panorama_9D2AC144_9260_97C8_41D6_193632EF56CE_HS_o9vwbtk1_en.webp
@@ -151,6 +153,7 @@ Image_8771FAD9_888E_C5DA_41E0_6463C3A60A04.url = skin/Image_8771FAD9_888E_C5DA_4
 Image_8F0C6273_929F_95C8_41E1_9923F4C00BD8.url = skin/Image_8F0C6273_929F_95C8_41E1_9923F4C00BD8_en.png
 Image_9E3EC19F_8882_C456_4196_0416D9BDD7B4.url = skin/Image_9E3EC19F_8882_C456_4196_0416D9BDD7B4_en.jpg
 Image_A56E7F7E_FE13_2E18_41E3_0155153C8421.url = skin/Image_A56E7F7E_FE13_2E18_41E3_0155153C8421_en.png
+Image_B76178EE_93F5_7D9E_41AE_2CC8288CE687.url = skin/Image_B76178EE_93F5_7D9E_41AE_2CC8288CE687_en.png
 Image_D88A60BE_FE73_3218_41E9_38A73B14555A.url = skin/Image_D88A60BE_FE73_3218_41E9_38A73B14555A_en.jpg
 Image_E7916DB3_FEDE_3A68_41E7_15A5C203107C.url = skin/Image_E7916DB3_FEDE_3A68_41E7_15A5C203107C_en.jpg
 
